# optyfi-challenge

./: .env.example  .gitignore  README.md  backtesting.py  config.py  main.py  pyproject.toml  run.sh  strategies.py
cls/: daily_data_feed.py  erc20.py  gas_estimator.py  price_data.py  uniswap_v3.py  uniswap_v3_math.py  utils.py  xio.py
data/: AvgGasPrice.csv
